# Git-Precommit-Hook

./: .flake8  .gitignore  README.md  pre-commit  pyproject.toml
.github/workflows/: pyinstaller.yml
gitshield/: cli.py  test_cli.py  utils.py
locale/: en.json
